plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gradleup.shadow' version '9.2.2'
    id("jacoco")
    id("org.barfuin.gradle.jacocolog") version "3.1.0"
}

group 'fr.univ_amu.m1info.board_game_library'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'fr.univ_amu.l3mi.drawing_app.app.DrawingApp'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

ext {
    junitVersion = '6.0.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'fr.univ_amu.l3mi.drawing_app'
    mainClass = 'fr.univ_amu.l3mi.drawing_app.app.DrawingApp'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

javafx {
    version = '25'
    modules = ['javafx.controls']
}

dependencies {
    testImplementation("org.assertj:assertj-core:3.27.3")
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
}

def jacocoExclude = [
        'fr/univ_amu/l3mi//drawing_app/controller/**',
        'fr/univ_amu/l3mi//drawing_app/view/**',
        'fr/univ_amu/l3mi//drawing_app/app/**'
]

tasks.test {
    finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
}
tasks.jacocoTestReport {
    dependsOn(tasks.test)// tests are required to run before generating the report
    reports {
        xml.required = true
        csv.required = true
    }

}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExclude)
        }))
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        getClassDirectories().setFrom(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExclude)
        })
    }
}



